apps/staging/angular-regular/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-app-angular
  # namespace: ns-angular-regular-staging
  labels:
    name: web
    app: app-angular-staging
spec:
  replicas: 1
  selector:
      matchLabels:
        name: app-angular-staging
  template:
    metadata:
      labels:
        name: app-angular-staging
    spec:
      containers:
      - name: angular-staging 
        image: haroldo89/front-app:69
        ports:
        - containerPort: 80
