apps/staging/angular-regular/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-angular-staging
  namespace: ns-angular-regular-staging
  labels:
    name: app-angular-staging
    app: app-angular-staging
spec:
  selector:
    name: app-angular-staging
