apps/staging/angular-regular/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-angular-staging
  namespace: ns-angular-regular-staging
spec:
  rules:
  -  http:
       paths:
         - pathType: Prefix
           path: "/" 
           backend:
             service:
               name: service-angular-staging
